welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return n;
           ^nearHundred:3: warning: enclosing method abs has result type Unit: return value discarded
    return n;
    ^nearHundred:5: warning: enclosing method abs has result type Unit: return value discarded
    return 0-n;
    ^nearHundred:10: error: value <= is not a member of Unit
  if(abs(n-100)<=10 || abs(n-200)<=10){
               ^nearHundred:10: error: value <= is not a member of Unit
  if(abs(n-100)<=10 || abs(n-200)<=10){
                                 ^