welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def abs(n: Int){
  if(n>0){
    return n;
  }else{
    return 0-n;
  }
}

def nearHundred(n:Int): Boolean = {
  if(abs(n-100)<=10 || abs(n-200)<=10){
    return true;
  }
  return false;
}